--- a/client/nav.jade
+++ b/client/nav.jade
@@ -1,51 +1,49 @@
 template(name='nav')
     unless is_frontdesk
         //- .ui.borderless.attached.big.inverted.menu.topnav
-        .ui.attached.borderless.inverted.big.menu.topnav.grgold
+        //- .ui.attached.borderless.inverted.large.menu.topnav.grgold
+        .ui.attached.borderless.inverted.large.menu.topnav
             //- a.toggle_sidebar.icon.item.sidebar_on
             //-     i.large.sidebar.icon
             if is_loading
                 .icon.item
-                    i.big.loading.yin.yang.icon
+                    i.big.loading.grey.yin.yang.icon
             else
-                a.item.set_model(href='/m/model' class="{{isActivePath '/m/model'}}")
+                a.item.set_models(href='/m/model' class="{{isActivePath '/m/model'}}")
                     //- i.sitemap.large.icon
                     +i name='active-directory'
                 a.icon.item(href='/home' class="{{isActivePath '/home'}}")
                     +i name='circled-menu'
+                a.icon.item(href='/front' class="{{isActivePath '/front'}}")
+                    +i name='home'
+                a.icon.item(href='/dashboard' class="{{isActivePath '/dashboard'}}")
+                    +i name='dashboard'
                     //- i.th.large.icon
-                if is_staff
-                    a.icon.item(href='/buildings' class="{{isActivePath '/buildings'}}")
-                        //- i.building.large.icon
-                        +i name='building'
-                        .mobile.hidden &nbsp; buildings
-                if is_staff
-                    a.icon.item(href='/staff' class="{{isActivePath '/staff'}}")
-                        //- i.shield.large.icon
-                        +i name='user-shield'
-                        .mobile.hidden &nbsp; staff
-                    a.icon.item(href='/residents' class="{{isActivePath '/residents'}}")
-                        //- i.users.large.icon
-                        +i name='groups'
-                        .mobile.hidden &nbsp; residents
                 if is_manager
                     a.icon.item(href='/manager' class="{{isActivePath '/manager'}}")
-                        //- i.shield.large.icon
                         +i name='user-shield'
                         .mobile.hidden &nbsp; manager
                 if is_staff
+                    a.icon.item(href='/buildings' class="{{isActivePath '/buildings'}}")
+                        +i name='building'
+                        .mobile.hidden &nbsp; buildings
+                    a.icon.item(href='/staff' class="{{isActivePath '/staff'}}")
+                        +i name='user-shield'
+                        .mobile.hidden &nbsp; staff
+                    a.icon.item(href='/residents' class="{{isActivePath '/residents'}}")
+                        +i name='groups'
+                        .mobile.hidden &nbsp; residents
                     a.icon.item(href='/healthclub' class="{{isActivePath '/healthclub'}}")
-                        //- i.clinic.medical.large.icon
                         +i name='treadmill'
                         .mobile.hidden &nbsp; kiosk
                 if is_user
                     a.icon.item(href='/users' class="{{isActivePath '/users'}}")
-                        //- i.users.large.icon
                         +i name='groups'
                         .mobile.hidden &nbsp; users
-
             .right.menu
                 if currentUser
+                    a.icon.item(href='/chat' class="{{isActivePath '/chat'}}")
+                        +i name='chat'
                     unless logging_out
                         //- if is_dev
                         unless is_frontdesk
@@ -63,9 +61,13 @@ template(name='nav')
                     //-         i.sign.out.large.icon
                 else
                     a.item(href='/login' title='login') 
-                        //- i.sign.in.large.icon
                         +i name='internal'
                         |login
+        .ui.attached.borderless.inverted.menu.topnav
+            each role_models
+                a.item.set_model(href="/m/#{slug}/")
+                    +i name=icon classes='ui avatar image'
+                    |#{title}
 
 
 
