--- a/client/dashboard.jade
+++ b/client/dashboard.jade
@@ -11,10 +11,10 @@ template(name='dashboard')
             .four.wide.column
                 +top_selling_products
                 .ui.header 
-                    i.food.icon
+                    +i name='food' classes='ui inline mini image'
                     |top selling food
                 .ui.header 
-                    i.tags.icon
+                    +i name='tags' classes='ui inline mini image'
                     |top selling tags
             .four.wide.column
                 +todays_stats
@@ -23,7 +23,7 @@ template(name='dashboard')
         .row
             .sixteen.wide.column
                 .ui.header 
-                    i.th.icon
+                    +i name='calendar' classes='ui inline mini image'
                     |your products
                 .ui.five.cards
                     each my_products
@@ -32,7 +32,7 @@ template(name='dashboard')
         
 template(name='bookmarked_users')
     .ui.header 
-        i.favorite.icon
+        +i name='favorite' classes='ui inline mini image'
         |bookmarked users
     //- .ui.small.header #{currentUser.current_product_count} products
     //- .ui.small.header #{currentUser.reservation_count} reservations
@@ -40,103 +40,96 @@ template(name='bookmarked_users')
         
         
 template(name='most_frequent_buyers')
-    .ui.secondary.segment
-        .ui.header 
-            i.user.icon
-            |most frequent buyers
-        each most_frequent_buyers
-            a(href="/user/#{username}")
-                .ui.small.header
-                    img.ui.avatar.image(src="{{c.url image_id width=100 height=100 gravity='face' crop='crop'}}")        
-                    | #{username}
-        
+    .ui.header 
+        +i name='user-male' classes='ui inline mini image'
+        |most frequent buyers
+    each most_frequent_buyers
+        a(href="/user/#{username}")
+            .ui.small.header
+                img.ui.avatar.image(src="{{c.url image_id width=100 height=100 gravity='face' crop='crop'}}")        
+                | #{username}
+    
         
         
         
 template(name='most_lucrative_buyers')
-    .ui.secondary.segment
-        .ui.header 
-            i.user.icon
-            |most lucrative buyers
-        each most_lucrative_buyers
-            a(href="/user/#{username}")
-                .ui.small.header
-                    img.ui.avatar.image(src="{{c.url image_id width=100 height=100 gravity='face' crop='crop'}}")        
-                    | #{username}
-        
-        
+    .ui.header 
+        +i name='user-male' classes='ui inline mini image'
+        |most lucrative buyers
+    each most_lucrative_buyers
+        a(href="/user/#{username}")
+            .ui.small.header
+                img.ui.avatar.image(src="{{c.url image_id width=100 height=100 gravity='face' crop='crop'}}")        
+                | #{username}
+    
+    
         
 template(name='top_selling_products')
-    .ui.secondary.segment
-        .ui.header
-            i.star.icon
-            | top selling products
-        .ui.animated.list
-            each top_products
-                a.item(href="/shop/#{_id}/view")
-                    .ui.small.header
-                        img.ui.avatar.image(src="{{c.url image width=100 height=100 gravity='face' crop='crop'}}")        
-                        | #{title}
+    .ui.header
+        +i name='star' classes='ui inline mini image'
+        | top selling products
+    .ui.animated.list
+        each top_products
+            a.item(href="/shop/#{_id}/view")
+                .ui.small.header
+                    img.ui.avatar.image(src="{{c.url image width=100 height=100 gravity='face' crop='crop'}}")        
+                    | #{title}
         
         
         
         
 template(name='todays_stats')
-    .ui.secondary.segment
-        .ui.header 
-            i.sun.icon
-            |todays stats
-        .ui.small.header $#{currentUser.todays_earnings} earned
-        .ui.icon.button.redraw_todays_stats 
-            i.refresh.icon
-        each todays_reservations
-            .ui.header #{date} #{notes}
-            a(href="/shop/#{product_id}/view") product view
-        .ui.header available jobs
-        each negative_products
-            .ui.small.header #{title}
+    .ui.header 
+        +i name='sun' classes='ui inline mini image'
+        |todays stats
+    .ui.small.header $#{currentUser.todays_earnings} earned
+    .ui.icon.button.redraw_todays_stats 
+        i.refresh.icon
+    each todays_reservations
+        .ui.header #{date} #{notes}
+        a(href="/shop/#{product_id}/view") product view
+    .ui.header available jobs
+    each negative_products
+        .ui.small.header #{title}
 
 
 
 template(name='weekly_stats')
-    .ui.secondary.segment
-        .ui.header 
-            i.list.icon
-            |weekly stats
-        .ui.small.header $#{currentUser.weekly_earnings} earned
-        .ui.small.header #{currentUser.weekly_reservations} reservations
-        .ui.icon.button.redraw_weekly_stats
-            i.refresh.icon
+    .ui.header 
+        +i name='week' classes='ui inline mini image'
+        |weekly stats
+    .ui.small.header $#{currentUser.weekly_earnings} earned
+    .ui.small.header #{currentUser.weekly_reservations} reservations
+    .ui.icon.button.redraw_weekly_stats
+        i.refresh.icon
 
 
 
 template(name='monthly_stats')
-    .ui.secondary.segment
-        .ui.header 
-            i.calendar.icon
-            |monthly stats
-        .ui.small.header $#{todays_earnings} earned
-        .ui.icon.button.redraw_monthly_stats
-            i.refresh.icon
-        each todays_reservations
-            .ui.header #{date} #{notes}
-            a(href="/shop/#{product_id}/view") product view
+    .ui.header 
+        +i name='calendar' classes='ui inline mini image'
+        |monthly stats
+    .ui.small.header $#{todays_earnings} earned
+    .ui.icon.button.redraw_monthly_stats
+        i.refresh.icon
+    each todays_reservations
+        .ui.header #{date} #{notes}
+        a(href="/shop/#{product_id}/view") product view
 
 
 
 
 
 template(name='todays_schedule')
-    .ui.secondary.segment
-        .ui.header
-            i.calendar.icon
-            |schedule for today
-        .ui.small.header tasks due today
-        .ui.small.header unread messages
-        .ui.small.header unread tickets
-        .ui.small.header events
-        //- each today_events
-        //-     .ui.header #{title} #{long_timestamp} #{_author_username}
+    .ui.header
+        +i name='calendar' classes='ui inline mini image'
+        |schedule for today
+    .ui.small.header tasks due today
+    .ui.small.header unread messages
+    .ui.small.header unread tickets
+    .ui.small.header events
+    //- each today_events
+    //-     .ui.header #{title} #{long_timestamp} #{_author_username}
 
 
 
@@ -202,7 +195,7 @@ template(name='product_card')
 
 template(name='product_stats')
     .ui.header 
-        i.line.chart.icon
+        +i name='line-chart' classes='ui inline mini image'
         |stats
     .ui.small.header #{currentUser.current_product_count} products
     .ui.small.header #{currentUser.reservation_count} reservations
