--- a/client/fields.jade
+++ b/client/fields.jade
@@ -109,7 +109,7 @@ template(name='link_view')
                 +i name=icon
             |#{title}
         a(href=field_value target='_window') #{field_value}
-        img.ui.fluid.image(src=field_value)
+        //- img.ui.fluid.image(src=field_value)
 
 template(name='image_view')
     if field_value
