--- a/components/delta/delta.jade
+++ b/components/delta/delta.jade
@@ -4,7 +4,6 @@ template(name='delta')
             .row
                 .six.wide.column
                     .ui.inline.header
-                        //- i.icon(class=icon)
                         +i name=icon
                         | #{title}
                     unless is_loading
@@ -29,12 +28,11 @@ template(name='delta')
                                 .ui.icon.large.button.print_delta(title='print session doc')
                                     i.code.icon
                             .ui.reset.icon.compact.button(title='reload session')
-                                //- i.refresh.icon
                                 +i name='refresh' classes='ui mini inline image'
                             .ui.delete_delta.icon.button(title='delete session')
                                 i.trash.icon
                         else
-                            .create_delta.ui.large.blue.button(title='new session')
+                            .create_delta.ui.large.button(title='new session')
                                 i.plus.icon
                                 |session
                         if description
@@ -63,7 +61,7 @@ template(name='facet')
         //- .ui.hidden.divider
         //- .ui.accordion
         //-     .active.title
-        .ui.grey.inline.header 
+        .ui.inline.header 
             if icon
                 //- i.small.icon(class=icon)
                 +i name=icon classes='ui mini inline image'   
@@ -73,10 +71,10 @@ template(name='facet')
                 |#{key}
                 //- i.dropdown.icon
             //- .active.content
-        if is_admin
-            .ui.icon.small.transparent.input
-                i.search.icon
-                input.add_filter(type='text')
+        //- if is_admin
+        .ui.icon.small.transparent.input
+            i.search.icon
+            input.add_filter(type='text')
         //- div
         each filtering_res
             if name
@@ -92,7 +90,7 @@ template(name='facet')
 
 template(name='toggle_delta_config')
     if boolean_true
-        .ui.grey.active.icon.button.disable_key(title=label)
+        .ui.active.icon.button.disable_key(title=label)
             i.icon(class=icon)
             // | #{label}
     else
